--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
               <input type="email" id="emailInputRegister" placeholder="Email" pattern=".*" required>
               <input type="password" id="passwordInputRegister" placeholder="Password" pattern=".*" required>
               <input type="password" id="password2InputRegister" placeholder="Confirm Password" pattern=".*" required>
-
+              <p style="color: white">Already have an account ? <a style = "color: white;" href="signin.html">Sign In</a></p>
               <input type="submit" value="Let's Ryde">
             </form>
         </section>
